welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value temps1
  if ((temps1*temps2)>0) {return false} else {return true}
       ^icyHot:2: error: not found: value temps2
  if ((temps1*temps2)>0) {return false} else {return true}
              ^