welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
  if ((temps1*temps2)>0) {return false} else {return true}
}